[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/Player/ghostMain.gd" type="Script" id=1]
[ext_resource path="res://assets/Entities/ghostTravel1.png" type="Texture" id=2]
[ext_resource path="res://assets/Entities/ghostTravel2.png" type="Texture" id=3]
[ext_resource path="res://assets/Entities/ghostTravel3.png" type="Texture" id=4]
[ext_resource path="res://assets/Entities/ghostTravel4.png" type="Texture" id=5]
[ext_resource path="res://assets/Entities/ghostTravel5.png" type="Texture" id=6]
[ext_resource path="res://assets/Entities/ghostTravel6.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "Travel",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 22.8357
height = 107.565

[sub_resource type="CircleShape2D" id=3]
radius = 187.872

[node name="ghost" type="KinematicBody2D"]
position = Vector2( 464.07, 246.065 )
scale = Vector2( 1.2, 1.2 )
collision_layer = 4
collision_mask = 4
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 4, 5 )
frames = SubResource( 1 )
animation = "Travel"

[node name="ghostCollision" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="chaseRange" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="chaseRange"]
shape = SubResource( 3 )
[connection signal="timeout" from="Timer" to="." method="ghostChange_targetTimer"]
[connection signal="body_entered" from="chaseRange" to="." method="_on_chaseRange_body_entered"]
[connection signal="body_exited" from="chaseRange" to="." method="_on_chaseRange_body_exited"]
